--- a/pld.spec.erb
+++ b/pld.spec.erb
@@ -3,17 +3,20 @@ Summary:	<%= spec.summary %>
 Name:		ruby-%{pkgname}
 Version:	<%= spec.version %>
 Release:	0.1
-License:	Distributable
+License:	<%= spec.licenses.empty? ? "GPL v2+ or Ruby" : spec.licenses.join(", ") %>
 Group:		Development/Languages
 Source0:	http://rubygems.org/downloads/%{pkgname}-%{version}.gem
 # Source0-md5:	-
 URL:		<%= spec.homepage %>
 BuildRequires:	rpm-rubyprov
 BuildRequires:	rpmbuild(macros) >= 1.656
+<% if ! spec.extensions.empty? -%>
+BuildRequires:	ruby-devel
+<% end -%>
 <% if ! spec.executables.empty? -%>
 BuildRequires:	sed >= 4.0
 <% end -%>
-<% for d in spec.dependencies -%>
+<% for d in spec.runtime_dependencies -%>
 <% for req in d.requirement -%>
 Requires:	ruby-<%= d.name %> <%= req %>
 <% end -%>
