development requirements fill buildrequires

--- a/pld.spec.erb
+++ b/pld.spec.erb
@@ -22,6 +22,15 @@ BuildRequires:	ruby-devel
 <% if ! spec.executables.empty? -%>
 BuildRequires:	sed >= 4.0
 <% end -%>
+<% if ! spec.development_dependencies.empty? -%>
+%if %{with tests}
+<% for d in spec.development_dependencies.sort -%>
+<% for req in d.requirement -%>
+BuildRequires:	ruby-<%= d.name %> <%= req %>
+<% end -%>
+<% end -%>
+%endif
+<% end -%>
 <% if ! spec.required_rubygems_version.empty? and ! spec.required_rubygems_version.first.empty? -%>
 Requires:	ruby-rubygems <%= spec.required_rubygems_version.first %>
 <% end -%>
@@ -29,15 +38,6 @@ Requires:	ruby-rubygems <%= spec.required_rubygems_version.first %>
 <% for req in d.requirement -%>
 Requires:	ruby-<%= d.name %> <%= req %>
 <% end -%>
-<% end -%>
-<% if ! spec.development_dependencies.empty? -%>
-%if %{with tests}
-<% for d in spec.development_dependencies.sort -%>
-<% for req in d.requirement -%>
-Requires:	ruby-<%= d.name %> <%= req %>
-<% end -%>
-<% end -%>
-%endif
 <% end -%>
 <% if spec.extensions.empty? -%>
 BuildArch:	noarch
